user details screen, table loading and error states, mobile header and seach input

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -13,18 +13,18 @@
 
 /* Webkit browsers */
 ::-webkit-scrollbar {
-  width: .7rem;
-  height: .7rem;
+  width: .5rem;
+  height: .5rem;
 }
 
 ::-webkit-scrollbar-track {
   background: #f1f1f1;
-  border-radius: .4rem;
+  // border-radius: .4rem;
 }
 
 ::-webkit-scrollbar-thumb {
   background: #888;
-  border-radius: .4rem;
+  // border-radius: .4rem;
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -37,8 +37,8 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Work Sans", sans-serif;
-  scrollbar-width: thin;
-  scrollbar-color: #888 #f1f1f1;
+  // scrollbar-width: thin;
+  // scrollbar-color: #888 #f1f1f1;
 }
 
 button, input{
