--- a/src/components/DashboardLayout/Header/Header.module.scss
+++ b/src/components/DashboardLayout/Header/Header.module.scss
@@ -1,6 +1,6 @@
 @import '@/styles/variables';
 
-.header{
+.header {
     display: none;
     grid-template-columns: 17.7rem 1fr;
     height: 6.25rem;
@@ -11,60 +11,64 @@
     z-index: 100;
     border-bottom: 1px solid #213F7D0F;
     box-shadow: 5px 0 20px 0px rgba(0, 0, 0, 0.04);
+
     @media (min-width: ($breakpoint-lg)) {
         display: grid;
     }
 
-    .logo{
+    .logo {
         padding: 0 0 0 1.5rem;
-        img{
+
+        img {
             width: 9.05rem;
             object-fit: contain;
         }
     }
 
-    .info{
+    .info {
         padding: 0 3rem;
-        display: flex ;
+        display: flex;
         align-items: center;
         justify-content: space-between;
 
-        div{
+        div {
             display: flex;
             align-items: center;
             gap: .5rem;
 
-            a{
+            a {
                 color: $dark-blue;
                 display: none;
+
                 @media (min-width: ($breakpoint-lg)) {
                     display: block;
-                  }
+                }
             }
         }
     }
 
-    .notificationBell{
+    .notificationBell {
         margin-left: 2rem;
         margin-right: 1rem;
         color: $dark-blue;
     }
 
-    .profile{
+    .profile {
         display: flex;
         gap: .5rem;
-        img{
+
+        img {
             height: 3rem;
             width: 3rem;
             border-radius: 100%;
         }
 
-        button{
+        button {
             display: flex;
             gap: .6rem;
             align-items: center;
             color: $dark-blue;
-            background-color: rgb(0,0,0,0);
+            background-color: rgb(0, 0, 0, 0);
             border: none;
             outline: none;
             font-weight: 500;
@@ -72,7 +76,7 @@
         }
     }
 
-    .input{
+    .input {
         width: 21.5rem;
         height: 100%;
         border: 1px solid rgba($gray, .20);
@@ -82,18 +86,18 @@
         color: $gray;
         font-size: 0.88rem;
 
-        &::placeholder{
+        &::placeholder {
             font-size: 0.88rem;
         }
     }
 
-    form{
+    form {
         width: auto;
         height: 2.5rem;
         display: flex;
         align-items: center;
 
-        button{
+        button {
             height: 100%;
             width: 3.5rem;
             display: grid;
@@ -102,15 +106,16 @@
             border-radius: 0 .5rem .5rem 0;
         }
     }
-    
+
 }
 
 .mobileHeader {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 6.25rem;;
+    height: 6.25rem;
     padding: 1rem;
+    gap: 1rem;
     background-color: #fff;
     border-bottom: 1px solid #213F7D0F;
     position: fixed;
@@ -120,144 +125,163 @@
     top: 0;
     left: 0;
 
-    .menuContainer{
-        background-color: rgb(0, 0, 0, .3);
-        height: 100vh;
+    .searchForm {
+        display: flex;
+        align-items: center;
+        margin-right: 1rem;
+        background-color: white;
         width: 100%;
-        position: fixed;
-        top: 0;
+        max-width: 350px;
         left: 0;
+        height: 2rem;
 
-        .mobileMenu{
-            width: 70%;
-            max-width: 500px;
-            background-color: white;
-           height: 100%;
-           overflow-y: auto;
 
-           section{
-        margin: 1rem 0;
-        text-align: left;
-           width: 100%;
-            h4{
-                font-weight: 500;
-                font-size: .75rem;
-                color: $gray;
-                text-transform: uppercase;
-                margin-bottom: .5rem;
-                padding-left: 1rem;
-            }
-           }
+        .input {
+            padding: 0.5rem;
+            border: none;
+            // margin-right: 0.5rem;
+            border-bottom: 1px solid rgba($gray, .20);
+            width: 100%;
+        }
 
-           
-    .switchOrganization{
-        display: flex;
-        gap: .6rem;
-        align-items: center;
-        margin-bottom: 1rem;
-        height: 2.5rem;
-        padding-left: 1.2rem;
-        font-weight: 400;
-        font-size: .88rem;
-        width: 100%;
+        button[type='submit'] {
+            height: 100%;
+        }
+
+        button[type='button'] {
+            height: 100%;
+            margin-left: 1rem;
+        }
+
+
+
     }
 
-    .navItem {
-        display: flex;
-        align-items: center;
-        height: 2.5rem;
-        font-weight: 400;
-        padding-left: 1rem;
-        border-left: 3px solid white;
-        text-decoration: none;
-        transition: color 0.3s, background-color 0.3s;
-        text-decoration: none;
-        opacity: .6;
-        color: $gray;
-      
-        &:hover {
-            opacity: 1;
-        }
-      }
-      
-      .navIcon {
-        margin-right: .6rem;
-      }
-      
-      .navTitle {
-        font-size: .88rem;
-      }
-      
-      .active {
-        color: $dark-blue; // Active state color
-        background-color: rgb(57, 205, 204, .1); // Active state background color
-        opacity: 1;
-        border-left: 3px solid $light-blue;
-      }
-
-          
-
-
-          > div{
-            display: flex;
-            height: 6.25rem;
-            align-items: center;
-            padding: 0 1rem;
-
-            img{
-                width: 100px;
-                object-fit: contain;
+    .menuContainer {
+            background-color: rgb(0, 0, 0, .3);
+            height: 100vh;
+            width: 100%;
+            position: fixed;
+            top: 0;
+            left: 0;
+    
+            .mobileMenu {
+                width: 70%;
+                max-width: 500px;
+                background-color: white;
+                height: 100%;
+                overflow-y: auto;
+    
+                section {
+                    margin: 1rem 0;
+                    text-align: left;
+                    width: 100%;
+    
+                    h4 {
+                        font-weight: 500;
+                        font-size: .75rem;
+                        color: $gray;
+                        text-transform: uppercase;
+                        margin-bottom: .5rem;
+                        padding-left: 1rem;
+                    }
+                }
+    
+    
+                .switchOrganization {
+                    display: flex;
+                    gap: .6rem;
+                    align-items: center;
+                    margin-bottom: 1rem;
+                    height: 2.5rem;
+                    color: $dark-blue;
+                    padding-left: 1.2rem;
+                    font-weight: 400;
+                    font-size: .88rem;
+                    width: 100%;
+                }
+    
+                .navItem {
+                    display: flex;
+                    align-items: center;
+                    height: 2.5rem;
+                    font-weight: 400;
+                    padding-left: 1rem;
+                    border-left: 3px solid white;
+                    text-decoration: none;
+                    transition: color 0.3s, background-color 0.3s;
+                    text-decoration: none;
+                    opacity: .6;
+                    color: $gray;
+    
+                    &:hover {
+                        opacity: 1;
+                    }
+                }
+    
+                .navIcon {
+                    margin-right: .6rem;
+                }
+    
+                .navTitle {
+                    font-size: .88rem;
+                }
+    
+                .active {
+                    color: $dark-blue; // Active state color
+                    background-color: rgb(57, 205, 204, .1); // Active state background color
+                    opacity: 1;
+                    border-left: 3px solid $light-blue;
+                }
+    
+    
+    
+    
+                >div {
+                    display: flex;
+                    height: 6.25rem;
+                    align-items: center;
+                    padding: 0 1rem;
+    
+                    img {
+                        width: 100px;
+                        object-fit: contain;
+                    }
+                }
             }
-           }
         }
-    }
 
-   
+
 
     @media (min-width: ($breakpoint-lg)) {
         display: none;
     }
-  
+
     .logo img {
-      width: 100px;
+        width: 100px;
     }
 
-    svg{
+    svg {
         color: $dark-blue;
     }
 
-  
+
     .info {
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-  
-      .searchForm {
         display: flex;
         align-items: center;
-        margin-right: 1rem;
-  
-        .input {
-          padding: 0.5rem;
-          border: 1px solid #ccc;
-          border-radius: 4px;
-          margin-right: 0.5rem;
-        }
+        gap: 1rem;
 
-      }
-  
-      .profile {
-        display: flex;
-        align-items: center;
-  
-        .userProfileImage {
-          width: 3rem;
-          height: 3rem;
-          border-radius: 50%;
+     
+
+        .profile {
+            display: flex;
+            align-items: center;
+
+            .userProfileImage {
+                width: 3rem;
+                height: 3rem;
+                border-radius: 50%;
+            }
         }
-      }
     }
-  }
-  
-
-
+}
