--- a/src/components/DashboardLayout/SideNav/SideNav.module.scss
+++ b/src/components/DashboardLayout/SideNav/SideNav.module.scss
@@ -9,10 +9,15 @@
     z-index: 5;
     display: none;
     flex-direction: column;
-    overflow-y: hidden;
+    overflow-y: scroll;
     padding: 2rem 0;
     border-right: 1px solid #213F7D0F;
     box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.04);
+
+    &::-webkit-scrollbar {
+        width: 0;
+        height: 0;
+      }
 
     nav{
         margin-top:1rem;
@@ -22,6 +27,7 @@
         display: flex;
         gap: .6rem;
         align-items: center;
+        color: $dark-blue;
         margin-bottom: 1rem;
         height: 2.5rem;
         padding-left: 1rem;
