--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -1,5 +1,62 @@
 @import '@/styles/variables';
 
+
+.loadingContainer {
+display: grid;
+place-items: center;
+height: 100%;
+height: 60vh;
+
+  > svg{
+      height: 3.5rem;
+      width: 3.5rem;
+      color: $light-blue;
+    animation: spin 1s linear infinite;
+    @keyframes spin {
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+  }
+}
+
+.errorContainer {
+  display:flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: .5rem;
+  height: 60vh;
+  > svg{
+    height: 3.5rem;
+    width: 3.5rem;
+    color: $red;
+}
+
+  }
+
+.noFilterResultContainer {
+  display:flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: .5rem;
+  position: absolute;
+  left: 0;
+  height: 50%;
+  width: 100%;
+  p{
+    color: $gray;
+  }
+  > svg{
+    height: 3.5rem;
+    width: 3.5rem;
+    color: $light-blue;
+}
+
+  }
+
+
 .parent {
   position: relative;
 }
@@ -89,6 +146,7 @@
       list-style: none;
       width: max-content;
       background-color: white;
+      box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.04);
       padding: .5rem 1rem;
       font-size: .88rem;
       text-align: left;
@@ -126,6 +184,7 @@
   border-radius: .25rem;
   display: flex;
   max-height: calc(100vh - 7rem);
+  box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.04);
   flex-direction: column;
   gap: 1rem;
   z-index: 50;
