--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,7 +3,7 @@ $black: #000;
 $dark-blue: #213F7D;
 $gray: #545F7D;
 $light-blue: #39CDCC;
-
+$red: #E4033B;
 
 // Breakpoints
 $breakpoint-md: 640px;
