--- a/src/app/(Dashboard)/customers/users/[userId]/UserDetails.module.scss
+++ b/src/app/(Dashboard)/customers/users/[userId]/UserDetails.module.scss
@@ -9,6 +9,27 @@ align-items: center;
 margin-top: 1rem;
 }
 
+.loadingContainer {
+    display: grid;
+    place-items: center;
+    height: 100%;
+    height: 80vh;
+  
+    >svg {
+      height: 3.5rem;
+      width: 3.5rem;
+      color: $light-blue;
+      animation: spin 1s linear infinite;
+  
+      @keyframes spin {
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+    }
+  }
+  
+
 
 .heading{
     display: flex;
@@ -45,7 +66,7 @@ align-items: center;
             border: 1px solid $red;
             color: $red;
 
-            &:hover{
+            & :hover{
                 background-color: $red;
                 color: white;
             }
@@ -205,17 +226,19 @@ align-items: center;
         display: grid;
         padding-bottom: 1.5rem;
         padding-top: 1.5rem;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
         gap: 1.5rem .5rem;
         border-bottom: 1px solid rgba($dark-blue, .1);
 
         @media (min-width: ($breakpoint-md)) {
-            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-columns: 1fr 1fr;
         }
 
         @media (min-width: ($breakpoint-lg)) {
             grid-template-columns: 1fr 1fr 1fr 1fr;
         }
+
+        
 
         article{
             display: flex;
