--- a/src/app/login/login.module.scss
+++ b/src/app/login/login.module.scss
@@ -83,6 +83,12 @@
       display: flex;
       flex-direction: column;
       gap: .5rem;
+      margin: 0 auto;
+      width: 100%;
+
+      @media (min-width: ($breakpoint-lg)) {
+        margin: 0;
+      }
 
       a{
         text-decoration: none;
