--- a/src/components/FormInputs/Button/Button.module.scss
+++ b/src/components/FormInputs/Button/Button.module.scss
@@ -7,7 +7,9 @@
     color: white;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     border-radius: .5rem;
     cursor: pointer;
     outline: none;
