--- a/src/components/DashboardLayout/Header/Header.module.scss
+++ b/src/components/DashboardLayout/Header/Header.module.scss
@@ -20,7 +20,7 @@
         padding: 0 0 0 1.5rem;
 
         img {
-            width: 9.05rem;
+            width: 5.05rem;
             object-fit: contain;
         }
     }
@@ -272,7 +272,8 @@
     }
 
     .logo img {
-        width: 100px;
+        width: 50px;
+        object-fit: contain;
     }
 
     svg {
