--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,7 +2,7 @@
 $black: #000;
 $dark-blue: #213F7D;
 $gray: #545F7D;
-$light-blue: #39CDCC;
+$light-blue: #AFDB5F;
 $red: #E4033B;
 
 // Breakpoints
